# Agora

./: .gitignore  .gitmodules  ARCHITECTURE.md  Dockerfile.fdroid  README.md  build-in-docker.ps1  build-in-fdroid-docker.sh  build-proot.sh  build_fdroid.ps1  gradle.properties  mkdocs.yml  settings.gradle.kts
.github/workflows/: build.yml  mkdocs.yml  universal_debug_build.yml
app/: build.gradle.kts  proguard-rules.pro
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/schemas/com.newoether.agora.data.local.ChatDatabase/: 10.json  2.json  5.json
app/src/fdroid/java/com/newoether/agora/sandbox/: FdroidSandboxManagerFactory.kt  ProotNative.kt  ProotSandboxManager.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_chat_jni.cpp  llama_jni.cpp  proot_jni.cpp
app/src/main/java/com/newoether/agora/: MainActivity.kt
app/src/main/java/com/newoether/agora/api/: AnthropicProvider.kt  BaseOpenAiProvider.kt  DeepSeekProvider.kt  DuckDuckGoScraper.kt  EmbeddingClient.kt  GeminiProvider.kt  HttpClient.kt  LlamaChatEngine.kt  LlamaEngine.kt  LlmProvider.kt  LocalEmbeddingEngine.kt  LocalProvider.kt  OllamaProvider.kt  OpenAiProvider.kt  OpenRouterProvider.kt  ProviderDefaults.kt  QwenProvider.kt
app/src/main/java/com/newoether/agora/data/: AutoBackupManager.kt  BuiltInPrompts.kt  ClaudeChatImporter.kt  DataExporter.kt  DataImporter.kt  DefaultSystemPrompt.kt  EmbeddingIndexer.kt  ExportExtraSettings.kt  LocalChatModelConfig.kt  MemoryManager.kt  SettingsManager.kt
app/src/main/java/com/newoether/agora/di/: AppContainer.kt
app/src/main/java/com/newoether/agora/model/: AttachmentMeta.kt  ChatMessage.kt  ModelId.kt
app/src/main/java/com/newoether/agora/sandbox/: SandboxDocumentsProvider.kt  SandboxManager.kt
app/src/main/java/com/newoether/agora/service/: AgoraForegroundService.kt  AppForegroundTracker.kt  EmbeddingCacheWorker.kt
app/src/main/java/com/newoether/agora/tool/: ImageGenToolProvider.kt  MemoryToolProvider.kt  RagToolProvider.kt  ShellToolProvider.kt  WebSearchToolProvider.kt
app/src/main/java/com/newoether/agora/util/: Constants.kt  CrashReporter.kt  FileValidator.kt  GradientBlur.kt  PdfPageRenderer.kt  SearchResultFormatter.kt  ShellClient.kt  ShellCrypto.kt  SshClient.kt
app/src/main/java/com/newoether/agora/viewmodel/: ChatViewModel.kt  ChatViewModelFactory.kt  GenerationManager.kt  GenerationSession.kt  ImportExportManager.kt  MessageGenerationController.kt  ModelManager.kt  ProviderRegistry.kt  RagManager.kt  TranscriptionManager.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/play/java/com/newoether/agora/sandbox/: PlaySandboxManager.kt  PlaySandboxManagerFactory.kt
app/src/test/java/com/newoether/agora/api/: DuckDuckGoScraperTest.kt  GenerationErrorTest.kt
app/src/test/java/com/newoether/agora/data/: DefaultSystemPromptTest.kt  EmbeddingIndexerTest.kt
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/buildlogic/: RemoveFirstLastFix.kt  RemoveFirstLastFixPlugin.kt
docs/: about.ar.md  about.de.md  about.en.md  about.es.md  about.fr.md  about.ja.md  about.ko.md  about.pt-BR.md  about.ru.md  about.zh-Hant.md  about.zh.md  appearance.ar.md  appearance.de.md  appearance.en.md  appearance.es.md  appearance.fr.md  appearance.ja.md  appearance.ko.md  appearance.pt-BR.md  appearance.ru.md  appearance.zh-Hant.md  appearance.zh.md  architecture-refactor-plan.md  conversations.ar.md  conversations.de.md  conversations.es.md  conversations.fr.md  conversations.ja.md  conversations.ko.md  conversations.md  conversations.pt-BR.md  conversations.ru.md  conversations.zh-Hant.md  embedding.ar.md  embedding.de.md  embedding.es.md  embedding.fr.md  embedding.ja.md  embedding.ko.md  embedding.md  (+225 more)
docs/ar/: about.md  appearance.md  faq.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
docs/de/: about.md  appearance.md  faq.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
docs/en/: about.md  appearance.md  conversations.md  faq.md  getting-started.md  image-generation.md  index.md  language.md  proxy.md  sandbox.md  system-prompts.md  tools.md  web-search.md
docs/es/: about.md  appearance.md  faq.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
docs/fr/: about.md  appearance.md  faq.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
docs/ja/: about.md  appearance.md  faq.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
docs/ko/: about.md  appearance.md  faq.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
docs/pt-BR/: about.md  appearance.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
docs/ru/: about.md  appearance.md  faq.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
docs/zh/: about.md  appearance.md  faq.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
docs/zh-Hant/: about.md  appearance.md  faq.md  image-generation.md  index.md  proxy.md  sandbox.md  tools.md  web-search.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 24.txt  25.txt  4.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/changelogs/: 24.txt  25.txt  4.txt
fdroid/metadata/: com.newoether.agora.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+105 files in other folders)
